veecle-osal-std-macros/tests/ui/telemetry_invalid.rs
#[veecle_osal_std_macros::main(telemetry = "invalid")]
async fn main() {}
